crates/plotnik-lib/tests/02-parser/recovery_unexpected/garbage_inside_node.txt
(a (b) @@@ (c)) (d)
==== diagnostics ====
error: expected a child node, or `)` to close
 --> query.ptk:1:8
  |
1 | (a (b) @@@ (c)) (d)
  |        ^^^
